add shared assembly info to all projects

--- a/Meissa/Meissa.csproj
+++ b/Meissa/Meissa.csproj
@@ -5,7 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RuntimeIdentifiers>win10-x64</RuntimeIdentifiers>
   </PropertyGroup>
-
+  
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <PropertyGroup>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
