--- a/CompareRunnersTestsProject/CompareRunnersTestsProject.csproj
+++ b/CompareRunnersTestsProject/CompareRunnersTestsProject.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <ItemGroup>
     <None Include="..\AutomateThePlanet.licenseheader" Link="AutomateThePlanet.licenseheader" />
   </ItemGroup>
