--- a/GenerateLoadTestProjects/GenerateLoadTestProjects.csproj
+++ b/GenerateLoadTestProjects/GenerateLoadTestProjects.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <Import Project="..\SharedAssemblyInfo.targets" />
+
   <ItemGroup>
     <None Include="..\AutomateThePlanet.licenseheader" Link="AutomateThePlanet.licenseheader" />
   </ItemGroup>
