--- a/LoadTestsProject/LoadTestsProject.csproj
+++ b/LoadTestsProject/LoadTestsProject.csproj
@@ -6,6 +6,8 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
+  <Import Project="..\SharedAssemblyInfo.targets" />
+
   <ItemGroup>
     <None Include="..\AutomateThePlanet.licenseheader" Link="AutomateThePlanet.licenseheader" />
   </ItemGroup>
