--- a/Meissa.API.Tests/Meissa.API.Tests.csproj
+++ b/Meissa.API.Tests/Meissa.API.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
