--- a/Meissa.API/Meissa.API.csproj
+++ b/Meissa.API/Meissa.API.csproj
@@ -3,7 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
+  
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
