--- a/Meissa.Core.Model/Meissa.Core.Model.csproj
+++ b/Meissa.Core.Model/Meissa.Core.Model.csproj
@@ -3,7 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
