--- a/Meissa.Core.Services.UnitTests/Meissa.Core.Services.UnitTests.csproj
+++ b/Meissa.Core.Services.UnitTests/Meissa.Core.Services.UnitTests.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
