--- a/Meissa.Infrastructure.UnitTests/Meissa.Infrastructure.UnitTests.csproj
+++ b/Meissa.Infrastructure.UnitTests/Meissa.Infrastructure.UnitTests.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <Import Project="..\SharedAssemblyInfo.targets" />
   
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
