--- a/Meissa.Plugins.Contracts/Meissa.Plugins.Contracts.csproj
+++ b/Meissa.Plugins.Contracts/Meissa.Plugins.Contracts.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <Import Project="..\SharedAssemblyInfo.targets" />
+  
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
