--- a/Meissa.Tests.Factories/Meissa.Tests.Factories.csproj
+++ b/Meissa.Tests.Factories/Meissa.Tests.Factories.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <Import Project="..\SharedAssemblyInfo.targets" />
   
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
