--- a/SharedAssemblyInfo.targets
+++ b/SharedAssemblyInfo.targets
@@ -1,19 +1,19 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">  
  <PropertyGroup>
-    <Version>1.0.0.0</Version>
+    <Version>1.0.1.0</Version>
     <Authors>Anton Angelov</Authors>
     <Company>Automate The Planet Ltd.</Company>
     <Product>Meissa</Product>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage> 
     <Copyright>Automate The Planet Ltd. 2018</Copyright>
     <PackageLicenseUrl>https://github.com/angelovstanton/Meissa/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>http://meissarunner.com</PackageProjectUrl>
     <PackageIconUrl>Icon URL</PackageIconUrl>
-    <RepositoryUrl>https://github.com/angelovstanton/Meissa</RepositoryUrl>
+    <RepositoryUrl>https://github.com/AutomateThePlanet/Meissa/</RepositoryUrl>
     <RepositoryType>Repo type</RepositoryType>
-    <PackageTags>Tags</PackageTags>
+    <PackageTags>tests, runner, distributed, uitests, webdriver, unitTests, dbTests, integrationTests, CI, CD</PackageTags>
     <PackageReleaseNotes>Release</PackageReleaseNotes>
   </PropertyGroup>
 </Project> 
