--- a/Meissa.Infrastructure/Meissa.Infrastructure.csproj
+++ b/Meissa.Infrastructure/Meissa.Infrastructure.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
