--- a/Meissa.API/Meissa.API.csproj
+++ b/Meissa.API/Meissa.API.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <RuntimeIdentifiers>win-x64,osx-x64,linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
   
