add new logic to distribute tests on same machine if have same class refactor mstest and nunit plugins to use Mono Cecil to load assemblies add failure info to protractor test cases change protractor test cases classes to be equal to specFile so that they can be distributed on same machine add new runner switch sameMachineByClass increase overral app version

--- a/Meissa.Plugins.MSTest/Meissa.Plugins.MSTest.csproj
+++ b/Meissa.Plugins.MSTest/Meissa.Plugins.MSTest.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mono.Cecil" Version="0.10.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" />
   </ItemGroup>
 
