--- a/installers/Meissa.Windows64/Meissa.Windows64.nuspec
+++ b/installers/Meissa.Windows64/Meissa.Windows64.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-	<id>Meissa.Windows</id>
+	<id>Meissa.Windows64</id>
     <version>1.3.0.0</version>
     <authors>Automate The Planet Ltd.</authors>
     <summary>Installs Meissa Distributed Test Runner.</summary>
