ignore NU1605 error in all projects fix problem with new background worker in API add new mstest small test project upgrade 3rd party nugets

--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,6 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+/installers/Meissa.Windows64/content
+/installers/Meissa.MacOS64/content
+/installers/Meissa.Linux64/content
