--- a/Meissa.API/Meissa.API.csproj
+++ b/Meissa.API/Meissa.API.csproj
@@ -18,13 +18,14 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;1705;NU1603</NoWarn>
+      <NoWarn>1701;1702;1705;NU1603;NU1605</NoWarn>
     <DocumentationFile>bin\Debug\netcoreapp2.0\Meissa.API.xml</DocumentationFile>
     <Optimize>false</Optimize>
     <WarningLevel>0</WarningLevel>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+      <NoWarn>1701;1702;1705;NU1603;NU1605</NoWarn>
     <DocumentationFile>bin\Release\netcoreapp2.0\Meissa.API.xml</DocumentationFile>
   </PropertyGroup>
 
@@ -34,9 +35,9 @@
 
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.HealthChecks" Version="1.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.2.1" />
     <PackageReference Include="AutoMapper" Version="7.0.1" />
