--- a/Meissa.Plugins.MSTest/Meissa.Plugins.MSTest.csproj
+++ b/Meissa.Plugins.MSTest/Meissa.Plugins.MSTest.csproj
@@ -10,6 +10,11 @@
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
 
   <ItemGroup>
     <AdditionalFiles Include="$(SolutionDir)\stylecop.json" Link="stylecop.json" />
