fix mergin Protractor test results add test project for testing protractor merge results

--- a/NUnitReportMerge.Spike/NUnitReportMerge.Spike.csproj
+++ b/NUnitReportMerge.Spike/NUnitReportMerge.Spike.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Meissa.Plugins.NUnit\Meissa.Plugins.NUnit.csproj" />
+    <ProjectReference Include="..\Meissa.Plugins.Protractor\Meissa.Plugins.Protractor.csproj" />
   </ItemGroup>
 
 </Project>
