add logic to clear temp folder of agents after run add logic to respect sameClassMachine property for splitting test cases across different threads on same machine for all plugins- add the property to DB execute post run actions for all plugins, in case of Protractor delete the multiple temp dirs fix bug with protractor searching spec files only in top dir add logic to delete temp dirs for Protractor in ExecutePostRunActions. increase installers version

--- a/Meissa/Properties/launchSettings.json
+++ b/Meissa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Meissa": {
       "commandName": "Project",
-      "commandLineArgs": "runner --outputFilesLocation=\"C:\\meissa-tests\" --testLibraryPath=\"C:\\meissa-tests\\SmallMSTestTestProject.dll\" --agentTag=\"Agent1\" --testTechnology=\"MSTest\" --resultsFilePath=\"C:\\meissa-tests-results\\all.trx\" --testServerUrl=\"http://127.0.0.1:5000\""
+      "commandLineArgs": "testAgent --testAgentTag=\"Agent1\" --testServerUrl=\"http://127.0.0.1:5000\""
     }
   }
 }
