fix nuspec files fixes in MSTest plugin fixes in how we get NUnit tests

--- a/NUnitReportMerge.Spike/NUnitReportMerge.Spike.csproj
+++ b/NUnitReportMerge.Spike/NUnitReportMerge.Spike.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Meissa.Plugins.MSTest\Meissa.Plugins.MSTest.csproj" />
     <ProjectReference Include="..\Meissa.Plugins.Protractor\Meissa.Plugins.Protractor.csproj" />
   </ItemGroup>
 
