--- a/SharedAssemblyInfo.targets
+++ b/SharedAssemblyInfo.targets
@@ -1,19 +1,34 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">  
  <PropertyGroup>
-    <Version>1.2.7.0</Version>
+    <Version>1.3.0.0</Version>
     <Authors>Anton Angelov</Authors>
     <Company>Automate The Planet Ltd.</Company>
     <Product>Meissa</Product>
-    <AssemblyVersion>1.2.7.0</AssemblyVersion>
-    <FileVersion>1.2.7.0</FileVersion>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage> 
     <Copyright>Automate The Planet Ltd. 2018</Copyright>
-    <PackageLicenseUrl>https://github.com/angelovstanton/Meissa/blob/master/LICENSE</PackageLicenseUrl>
+     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+     <PackageIcon>meissa_icon.png</PackageIcon>
     <PackageProjectUrl>http://meissarunner.com</PackageProjectUrl>
-    <PackageIconUrl>Icon URL</PackageIconUrl>
     <RepositoryUrl>https://github.com/AutomateThePlanet/Meissa/</RepositoryUrl>
-    <!--<RepositoryType>Repo type</RepositoryType>-->
     <PackageTags>tests, runner, distributed, uitests, webdriver, unitTests, dbTests, integrationTests, CI, CD</PackageTags>
     <PackageReleaseNotes>Release</PackageReleaseNotes>
   </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\meissa_icon.png" Pack="true" PackagePath=""/>
+        <None Include="..\LICENSE.txt" Pack="true" PackagePath=""/>
+    </ItemGroup>
 </Project>
