--- a/Meissa.Server/Meissa.Server.csproj
+++ b/Meissa.Server/Meissa.Server.csproj
@@ -55,6 +55,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
     <PackageReference Include="Polly" Version="7.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
