fix residual bugs

--- a/Meissa/Properties/launchSettings.json
+++ b/Meissa/Properties/launchSettings.json
@@ -9,7 +9,7 @@
   "profiles": {
     "Meissa": {
       "commandName": "Project",
-      "commandLineArgs": "runner --resultsFilePath=\"C:\\SourceCode\\Meissa\\SmallMSTestTestProject\\bin\\Debug\\netcoreapp3.1\\result.trx\" --agentTag=\"APIAgent\" --testTechnology=\"MSTest\" --testLibraryPath=\"C:\\SourceCode\\Meissa\\SmallMSTestTestProject\\bin\\Debug\\netcoreapp3.1\\SmallMSTestTestProject.dll\" --testServerUrl=\"http://127.0.0.1:5000\" --timeBasedBalance"
+      "commandLineArgs": "testAgent --testAgentTag=\"APIAgent\" --testServerUrl=\"http://127.0.0.1:5000\""
     }
   }
 }
