--- a/Meissa.Server/Meissa.Server.csproj
+++ b/Meissa.Server/Meissa.Server.csproj
@@ -50,6 +50,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
         <PrivateAssets>all</PrivateAssets>
