fix nunit plugin to use vstest fix distribute test cases services change a bit the options args fix bug in nunit and mstest extensions for update passed test cases

--- a/Meissa/Properties/launchSettings.json
+++ b/Meissa/Properties/launchSettings.json
@@ -9,7 +9,7 @@
   "profiles": {
     "Meissa": {
       "commandName": "Project",
-      "commandLineArgs": "testAgent --testAgentTag=\"APIAgent\" --testServerUrl=\"http://127.0.0.1:5000\""
+      "commandLineArgs": "testAgent --agentTag=\"BELLA\" --serverUrl=\"http:\\\\192.168.100.1:89\""
     }
   }
 }
