--- a/NUnitLoadTest/NUnitLoadTest.csproj
+++ b/NUnitLoadTest/NUnitLoadTest.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Check0Tests.cs" />
+    <Compile Include="Check1Tests.cs" />
     <Compile Include="Cosmos1Tests.cs" />
     <Compile Include="DriverFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
